First set of integration tests fixed.
Signed-off-by: Tomas Langer <tomas.langer@oracle.com>